@@ -1,3 +1,9 @@
+2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Workaround
+	  to a bug in mono 2.0. That mono version fails to compile an
+	  anonymous method in GetExpressionValuesAsync.
+
 2009-06-16  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* Mono.Debugging.Evaluation\TypeValueReference.cs: Only show
